# ChessOpenGL

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  main.c  main.cpp
Chess/core/: board.c  board.cpp  board.h  module.c  module.h  piece.c  piece.h  rules.c  rules.h
Chess/gfx/: shader.c  shader.h  texture.c  texture.h  vao.c  vao.h  vbo.c  vbo.h  window.c  window.h
Chess/util/: aabb.h  data.c  data.h  parser.c  parser.h  util.h
assets/: base.fs  base.vs
dependencies/GLAD/: gladConfig.cmake
dependencies/GLAD/src/: glad.c
resources/: base.fs  base.vs  board.fs
resources/shaders/: base.fs  base.vs  board.fs  board.vs
